--- a/index.html
+++ b/index.html
@@ -20,22 +20,39 @@
             <script src="js/respond.min.js"></script>
         <![endif]-->
     </head>
-<body>
-    <!-- ================== NAVBAR ================== -->
-    <div class="nav-container">
-        <a class="site-title slow-scroll" href="#home">Raquel Castillo</a>
-        <nav class="nav-menu">
-            <ul class="nav-list">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul> 
-        </nav>
+<body class="one-page">
+    <div id="nav-btn" class="nav-btn active">
+        <div class="doc-loader" style="display: none;"></div>
+        <span class="nav-btn-cover">
+            <span class="menu-line"></span>                   
+        </span>
     </div>
-
+    <div class="s-nav active">
+        <div class="nav-count">
+            <div class="current-num">
+                <span style="opacity: 1; left: 0px;">01</span>
+            </div>
+            <div class="pagination-sep">/</div>
+            <div class="total-pages-num">07</div>
+        </div>                                                            
+        <div class="nav-container">
+            <a class="site-title slow-scroll" href="#home">RAQUEL CASTILLO</a>
+            <nav class="nav-menu">
+                <ul class="nav-list">
+                    <li class="current"><a href="#home">Home</a></li>
+                    <li class=""><a href="#about">About</a></li>
+                    <li class=""><a href="#portfolio">Portfolio</a></li>                                                                        
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <ul class="nav-soc">
+            <li><a href="#">TW.</a></li>
+            <li><a href="#">IN.</a></li>
+            <li><a href="#">FB.</a></li>
+        </ul>
+    </div>
     <!-- ================== HOME ================== -->
     <section id="home" class="section">
         <div class="container-wrap">                        
@@ -49,62 +66,10 @@
             <a href="#services" class="main-btn slow-scroll"><img src="images/scroll-icon.svg" alt=""></a>
         </div>
     </section>
-    <!-- ================== SERVICES ================== -->
-    <section id="services" class="section section-active">
 
-        <div class="content-670">
-            <h2 class="title">SERVICES</h2>
-            <div class="section-des">
-                Lorem ipsum dolor sit amet consectetu adipiscing elit viverra tristique placerat
-            </div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra tristique placerat in sat massa consectetur quisque. Nunc aces fames lectus in libero aliquet ertare feraso est lorem nunc dolor sit amet settera aces volutpat in voltare lupar est phasellus.
-            </p>
-            <p>
-                Faucibus sed tristique fames sed aliquet ultricies eget viverra arcu. Vitae faucibus diam consequat aecenas. Turpis metus sit diam purus leo in varius ac quam. Nunc amet tristique set volutpat <a href="#">estars adipiscing</a> vulputate est phasellus. Volutpat faucibus per praesent aced nuncare voltare per settera lorem ipsum dolor.
-            </p>
-        </div>
-
-        <ul class="serv-link-cover block-right" data-jarallax-element="0 40" style="position: relative; z-index: 0; transform: translate3d(11.861px, 0px, 0px);">
-            <li><a href="#">DOWNLOAD CV</a></li>
-            <li><a href="#">MY PORTFOLIO</a></li>
-        <div id="jarallax-container-2" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none; z-index: -100;"><div style="position: fixed;"></div></div></ul>
-
-        <div class="content-670"> 
-            <div class="serv-block-wrap">
-
-                <div class="serv-block-item">
-                    <img src="images/serv-icon-1.svg" alt="">
-                    <h4>DESIGN</h4>
-                    <p>
-                        A Artistic and Graphic design back ground check out my Art Portfolio!
-                    </p>
-                </div>
-
-                <div class="serv-block-item">
-                    <img src="images/serv-icon-2.svg" alt="">
-                    <h4>DEVELOP</h4>
-                    <p>
-                        A full stack Developer proficient in Basic Languages!
-                    </p>
-                </div>
-
-                <div class="serv-block-item">
-                    <img src="images/serv-icon-3.svg" alt="">
-                    <h4>Other Skills</h4>
-                    <p>
-                        Other Creative skills and hobbies!
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- ================== ABOUT ================== -->
     <section id="about" class="section">
         <h2 class="title">ABOUT</h2>
-        <div class="section-des">
-            personal statement
-        </div>
         <ul class="about-info" data-threshold="0 0" data-jarallax-element="40 0" style="position: relative; z-index: 0; transform: translate3d(0px, 0px, 0px);">
             <li>
                 <h6>EMAIL</h6>
@@ -118,20 +83,15 @@
                 <h6>PHONE</h6>
                 <a href="tel:+18016615307">(+1) 801 661 5307</a>
             </li>
-            <div id="jarallax-container-4" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none; z-index: -100;"><div style="position: fixed;"></div></div></ul>
-            <div class="about-text content-670">
-                <p>
-                    Nam ultrices ultrices nec tortor pulvinar fermentum mi. Sociis sit tristique sagittis, mauris volutpat estera phasellus. Varius nec orci, quam augue lorem lines pellentesque non id. Tristique amet volutpat nunc euismod. Mauris <a href="#">felis at quam</a> sollicitudin est sempe vulputate id in nullam. Purus tincidunt maga ut turpis eu, eu enim. Nisl porttitor elit risus velit urna morbit mauris at proin laoreet lobortis urna aliquam setera fermentum sit iaculis vitae hendrerit et. Arcu ac est dictum lorem ispum dolor sit amet nunc usrus seio.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra tristique placerat in sat massa consectetur quisque. Nunc aces fames lectus in libero aliquet ertare feraso est lorem nunc dolor sit amet settera aces volutpat in voltare lupar est phasellus.
-                </p>
-                <p>
-                    Faucibus sed tristique fames sed aliquet ultricies eget viverra arcu. Vitae faucibus diam consequat aecenas. Turpis metus sit diam purus leo in varius ac quam. Nunc amet sei tristique set volutpat vulputate est phasellus. Volutpat faucibus per praesent aced no nuncare voltare per settera lorem ipsum dolor loboritas prion mauris varius est.
-                </p>
-            </div>
+        </ul>
+        <div class="about-text content-670">
+            <p>
+                Nam ultrices ultrices nec tortor pulvinar fermentum mi. Sociis sit tristique sagittis, mauris volutpat estera phasellus. Varius nec orci, quam augue lorem lines pellentesque non id. Tristique amet volutpat nunc euismod. Mauris <a href="#">felis at quam</a> sollicitudin est sempe vulputate id in nullam. Purus tincidunt maga ut turpis eu, eu enim. Nisl porttitor elit risus velit urna morbit mauris at proin laoreet lobortis urna aliquam setera fermentum sit iaculis vitae hendrerit et. Arcu ac est dictum lorem ispum dolor sit amet nunc usrus seio.
+            </p>
+        </div>
+            
     <!-- ================== PORTFOLIO ================== -->
-    <section id="Portfolio" class="section">
+    <section id="portfolio" class="section">
         <h2 class="title">PORTFOLIO</h2>
         <div id="p-item-1" class="grid-item element-item p-one">
             <a class="item-link ajax-portfolio" href="portfolio-1.html" data-id="1">
@@ -168,12 +128,54 @@
                 </div>
             </a>
         </div>
+
+        <div id="p-item-4" class="grid-item element-item p-four">
+            <a class="item-link ajax-portfolio" href="portfolio-4.html" data-id="4">
+                <img src="images/portfolio4.jpg" alt="" />
+                <div class="portfolio-text-holder">
+                    <div class="portfolio-text-wrapper">
+                        <p class="portfolio-text">Bottoms Up</p>
+                        <p class="portfolio-cat">Text</p>
+                    </div>
+                </div>
+            </a>
+        </div>
     </section>
 
     <!-- ================== SKILLS ================== -->
     <section id="skills" class="section">
         <h2 class="title">SKILLS</h2>
+    <!-- ================== contact ================== -->
+    <section id="contact" class="section section-active">
+        <h2 class="title">CONTACT</h2>
+        <div class="section-des">
+            Drop A Line!
+        </div>
+        <div class="content-670">
+            <p>
+                Want to collaborate? Have questions about my resume or other qualifications, Feel free to send me a message! 
+            </p>
+        </div>
+                
 
+        <div class="content-670">
+            <div class="contact-form">
+                <p>
+                    <input id="name" type="text" name="your-name" placeholder="NAME">
+                </p>
+                <p>
+                    <input id="contact-email" type="email" name="your-email" placeholder="EMAIL">
+                </p>                                    
+                <p>
+                    <textarea id="message" name="your-message" placeholder="MESSAGE"></textarea>
+                </p>
+                <p class="contact-submit-holder">
+                    <input type="submit" value="SEND">
+                </p>                                
+            </div> 
+        </div>
+
+    </section>
     <!--=================== SCRIPT ===================-->
     <script src="js/jquery.js"></script>
     <script src="js/imagesloaded.pkgd.js"></script>
