--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             </nav>
         </div>
         <ul class="nav-soc">
-            <li id="twitter"><a href="https://twitter.com/raquel73067960"><img src="images/icons8-twitter (2).svg" width="30px" height="30px"/></a></li>
-            <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin.svg"/></a></li>
-            <li id="github"><a href="https://github.com/"><img src="images/icons8-github.svg"/></a></li>
+            <li id="twitter"><a href="https://twitter.com/raquel73067960"><img src="images/icons8-twitter (4).svg" width="30px" height="30px"/></a></li>
+            <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin (1).svg" width="30px" height="30px"/></a></li>
+            <li id="github"><a href="https://github.com/"><img src="images/icons8-github (2).svg" width="30px" height="30px"/></a></li>
         </ul>
     </div>
     <!-- ================== HOME ================== -->
