fix css and info page

--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -1,52 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE HTML>
+<html lang="en-US">
     <head>
-        <title>3</title>
+        <title>Mastermind - Info</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by CocoBasic" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <link rel="shortcut icon" href="images/favicon.ico">
-        <link href='https://fonts.googleapis.com/css?family=Poppins:200,400,500,700,800&display=swap'
-rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Poppins:200,400,500,700,800&display=swap' rel='stylesheet' type='text/css'>                     
         <link rel="stylesheet" href="css/clear.css">
-        <link rel="stylesheet" href="css/bootstrap-grid.css">
+        <link rel="stylesheet" href="css/bootstrap-grid.css">        
         <link rel="stylesheet" href="css/prettyPhoto.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="style.css">
+
         <!--[if lt IE 9]>
-            <script src="js/html5shiv.js"></script>
-            <script src="js/respond.min.js"></script>
-        <![endif]-->
+            <script src="js/html5shiv.js"></script>            
+            <script src="js/respond.min.js"></script>                   
+        <![endif]-->                
     </head>
-<body>
-    <div class="nav-container">
-        <a class="site-title slow-scroll" href="#home">Raquel Castillo</a>
-        <nav class="nav-menu">
-            <ul class="nav-list">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul> 
-        </nav>
-    </div> 
 
+    <body class="single-portfolio single"> 
 
-    <!--=================== SCRIPT ===================-->
-    <script src="js/jquery.js"></script>
-    <script src="js/imagesloaded.pkgd.js"></script>
-    <script src="js/jquery.fitvids.js"></script>
-    <script src="js/jarallax.js"></script>
-    <script src="js/jarallax-element.min.js"></script>
-    <script src="js/isotope.pkgd.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src='js/owl.carousel.min.js'></script>
-    <script src="js/main.js"></script>
-</body>
+        <div class="doc-loader"></div>
+
+        <div class="container">
+            <div class="page-wrapper">
+
+                <!-- ================= HEADER ================= -->
+                <div id="nav-btn" class="nav-btn">
+                    <span class="nav-btn-cover">
+                        <span class="menu-line"></span>                   
+                    </span>
+                </div>
+                <div class="s-nav">
+                    <div class="nav-count">
+                        <div class="current-num">
+                            <span>01</span>
+                        </div>
+                        <div class="pagination-sep">/</div>
+                        <div class="total-pages-num">01</div>
+                    </div>                                                            
+                    <div class="nav-container">
+                        <a class="site-title slow-scroll" href="index.html#home">Raquel Castillo</a>
+                        <nav class="nav-menu">  
+                            <ul class="nav-list">
+                                <li><a href="index.html#home">Home</a></li>
+                                <li><a href="index.html#about">About</a></li>
+                                <li><a href="index.html#portfolio">Work</a></li>                                                                        
+                                <li><a href="index.html#skills">Skills</a></li>
+                                <li><a href="index.html#contact">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <ul class="nav-soc">
+                        <li id="twitter"><a href="https://twitter.com/raquel73067960"><img src="images/icons8-twitter (4).svg" width="30px" height="30px"/></a></li>
+                        <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin (1).svg" width="30px" height="30px"/></a></li>
+                        <li id="github"><a href="https://github.com/"><img src="images/icons8-github (2).svg" width="30px" height="30px"/></a></li>
+                    </ul>
+                </div>
+                <!-- =============== HEADER END =============== -->
+
+                <section class="section">                    
+                    <div class="portfolio-item-wrapper">
+                        <div class="portfolio-content">                            
+
+                            <div class="image-slider-wrapper relative block-right">
+                                <div class="owl-carousel owl-theme image-slider slider" data-speed="2000" data-auto="false" data-hover="true">
+                                    <div class="owl-item">
+                                        <img src="images/item1.jpg" alt="">
+                                    </div>
+                                    <div class="owl-item">
+                                        <img src="images/item2.jpg" alt="">
+                                    </div>                              
+                                    <div class="owl-item">
+                                        <img src="images/item3.jpg" alt="">
+                                    </div>                               
+                                </div>                                                            
+                            </div>
+
+                            <h2 class="title">The Little Coffee Club</h2>
+
+                            <p class="section-des">
+                                HTML, CSS, 
+                            </p>
+
+                            <p class="content-670">
+                                The app is called "The little coffee club." Users can add a coffee tasting experience and share it with friends. 
+                                They are provided a list of the highest to lowest rated coffees with the ratings collected. 
+                                The website includes a Brew Method section where users can get a list of different ways to brew their coffee for their next tasting experience.
+
+                        </div>                                    
+                    </div>                                                     
+                </section>                    
+            </div>        
+        </div>        
+
+        <!--=================== SCRIPT ===================-->
+        <script src="js/jquery.js"></script>       
+        <script src="js/imagesloaded.pkgd.js"></script>
+        <script src="js/jquery.fitvids.js"></script>
+        <script src="js/jarallax.js"></script>
+        <script src="js/jarallax-element.min.js"></script>
+        <script src="js/isotope.pkgd.js"></script>        
+        <script src="js/jquery.prettyPhoto.js"></script>                
+        <script src='js/owl.carousel.min.js'></script>                                                            
+        <script src="js/main.js"></script>
+    </body>
 </html>
