add css and photos

--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -72,21 +72,24 @@
                             <div class="image-slider-wrapper relative block-right">
                                 <div class="owl-carousel owl-theme image-slider slider" data-speed="2000" data-auto="false" data-hover="true">
                                     <div class="owl-item">
-                                        <img src="images/item1.jpg" alt="">
+                                        <img src="images/BU1.png" alt="">
                                     </div>
                                     <div class="owl-item">
-                                        <img src="images/item2.jpg" alt="">
+                                        <img src="images/BU2.png" alt="">
                                     </div>                              
                                     <div class="owl-item">
-                                        <img src="images/item3.jpg" alt="">
+                                        <img src="images/BU3.png" alt="">
                                     </div>                               
+                                    <div class="owl-item">
+                                        <img src="images/BU4.png" alt="">
+                                    </div>                                                            
                                 </div>                                                            
                             </div>
 
                             <h2 class="title">Bottoms Up</h2>
 
                             <p class="section-des">
-                                HTML, CSS, Python
+                                HTML, CSS, Python, AWS, JavaScript, Materialize, PostgreSQL
                             </p>
 
                             <p class="content-670">
