--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -72,21 +72,19 @@
                             <div class="image-slider-wrapper relative block-right">
                                 <div class="owl-carousel owl-theme image-slider slider" data-speed="2000" data-auto="false" data-hover="true">
                                     <div class="owl-item">
-                                        <img src="images/item1.jpg" alt="">
+                                        <img src="images/mm1.jpg" alt="" >
                                     </div>
                                     <div class="owl-item">
-                                        <img src="images/item2.jpg" alt="">
+                                        <img src="images/mm2.jpg" alt="">
                                     </div>                              
-                                    <div class="owl-item">
-                                        <img src="images/item3.jpg" alt="">
-                                    </div>                               
+                          
                                 </div>                                                            
                             </div>
 
                             <h2 class="title">Mastermind</h2>
 
                             <p class="section-des">
-                                HTML, CSS, 
+                                HTML, CSS, Vanilla JavaScript
                             </p>
 
                             <p class="content-670">
