--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Mastermind - Info</title>
+        <title>Calorie Compadre - Info</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by CocoBasic" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -72,13 +72,16 @@
                             <div class="image-slider-wrapper relative block-right">
                                 <div class="owl-carousel owl-theme image-slider slider" data-speed="2000" data-auto="false" data-hover="true">
                                     <div class="owl-item">
-                                        <img src="images/item1.jpg" alt="">
+                                        <img src="images/CC1.png" alt="">
                                     </div>
                                     <div class="owl-item">
-                                        <img src="images/item2.jpg" alt="">
+                                        <img src="images/CC2.png" alt="">
                                     </div>                              
                                     <div class="owl-item">
-                                        <img src="images/item3.jpg" alt="">
+                                        <img src="images/CC3.png" alt="">
+                                    </div>                               
+                                    <div class="owl-item">
+                                        <img src="images/CC4.png" alt="">
                                     </div>                               
                                 </div>                                                            
                             </div>
@@ -86,7 +89,7 @@
                             <h2 class="title">Calorie Compadre</h2>
 
                             <p class="section-des">
-                                HTML, CSS, 
+                                HTML, CSS, Express, React, Node, MongoDB 
                             </p>
 
                             <p class="content-670">
