--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <ul class="nav-soc">
             <li id="twitter"><a href="https://twitter.com/raquel73067960"><img src="images/icons8-twitter (4).svg" width="30px" height="30px"/></a></li>
-            <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin (1).svg" width="30px" height="30px"/></a></li>
+            <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin.svg" width="30px" height="30px"/></a></li>
             <li id="github"><a href="https://github.com/"><img src="images/icons8-github (2).svg" width="30px" height="30px"/></a></li>
         </ul>
     </div>
