--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -87,6 +87,10 @@
                             </div>
 
                             <h2 class="title">Bottoms Up</h2>
+                            <ul class="soc">
+                                <li id="github"><a href="https://github.com/andrea-s21/bottoms-up-app.git"><img src="images/icons8-githubOR.svg" width="30px" height="30px"/></a></li>
+                                <li id="website"><a href="https://bottoms-up-app-rad.herokuapp.com/"><img src="images/icons8-website-50.png" width="27px" height="27px"/></a></li>
+                            </ul>
 
                             <p class="section-des">
                                 HTML, CSS, Python, AWS, JavaScript, Materialize, PostgreSQL
@@ -96,7 +100,8 @@
                                 Bottoms Up! is an app that helps you find a drink for any occasion!
                                 With our unique "Alcoholgorithm," we find the best drink for your day and mood! 
                                 Ease your mind with a stress-free app that lets you save your perfectly curated drink for quick and easy access. 
-                                like we always say, "When life throws lemons catch them and make a cocktail!"                            </p>
+                                like we always say, "When life throws lemons catch them and make a cocktail!"                            
+                            </p>
 
                         </div>                                    
                     </div>                                                     
