--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -82,7 +82,10 @@
                             </div>
 
                             <h2 class="title">Mastermind</h2>
-
+                            <ul class="soc">
+                                <li id="github"><a href="https://github.com/raquellyc/mastermindgame.git"><img src="images/icons8-githubOR.svg" width="30px" height="30px"/></a></li>
+                                <li id="website"><a href="https://raquellyc.github.io/mastermindgame/"><img src="images/icons8-website-50.png" width="27px" height="27px"/></a></li>
+                            </ul>
                             <p class="section-des">
                                 HTML, CSS, Vanilla JavaScript
                             </p>
