--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -87,7 +87,10 @@
                             </div>
 
                             <h2 class="title">The Little Coffee Club</h2>
-
+                            <ul class="soc">
+                                <li id="github"><a href="https://github.com/raquellyc/coffee-tasting.git"><img src="images/icons8-githubOR.svg" width="30px" height="30px"/></a></li>
+                                <li id="website"><a href="https://coffee-tasting-poj2.herokuapp.com/"><img src="images/icons8-website-50.png" width="27px" height="27px"/></a></li>
+                            </ul>
                             <p class="section-des">
                                 HTML, CSS, Node, Express, MongoDB 
                             </p>
