--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -87,7 +87,10 @@
                             </div>
 
                             <h2 class="title">Calorie Compadre</h2>
-
+                            <ul class="soc">
+                                <li id="github"><a href="https://github.com/raquellyc/caloriecountdiary.git"><img src="images/icons8-githubOR.svg" width="32px" height="32px"/></a></li>
+                                <li id="website"><a href="https://calorie-count-diary.herokuapp.com/"><img src="images/icons8-website-50.png" width="27px" height="27px"/></a></li>
+                            </ul>
                             <p class="section-des">
                                 HTML, CSS, Express, React, Node, MongoDB 
                             </p>
