fix resume link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span>01</span>
             </div>
             <div class="pagination-sep">/</div>
-            <div class="total-pages-num">04</div>
+            <div class="total-pages-num">05</div>
         </div>                                                            
         <div class="nav-container">
             <a class="site-title slow-scroll" href="#home">Raquel Castillo</a>
@@ -64,8 +64,8 @@
         </div>
         <ul class="nav-soc">
             <li id="twitter"><a href="https://twitter.com/raquel73067960"><img src="images/icons8-twitter (4).svg" width="30px" height="30px"/></a></li>
-            <li id="linkeden"><a href="https://www.linkedin.com/feed/?trk=nav_logo"><img src="images/icons8-linkedin.svg" width="30px" height="30px"/></a></li>
-            <li id="github"><a href="https://github.com/"><img src="images/icons8-github (2).svg" width="30px" height="30px"/></a></li>
+            <li id="linkeden"><a href="https://www.linkedin.com/in/raquelscastillo/"><img src="images/icons8-linkedin.svg" width="30px" height="30px"/></a></li>
+            <li id="github"><a href="https://github.com/raquellyc"><img src="images/icons8-github (2).svg" width="30px" height="30px"/></a></li>
         </ul>
     </div>
     <!-- ================== HOME ================== -->
@@ -80,14 +80,20 @@
         <h2 class="title">ABOUT</h2>
         <div class="about-text content-670">
             <p>
-                I'm a front-end developer and a Design lover based in Salt Lake City, Utah. I love incorporating aesthetic designs and functional working code to make a beautiful website.<br>I have a certification from General Assembly as a Software Engineer. 
-                I also have always been interested in digital art and Design (check out my design work in the Work Section!) Drawing and Creating are one of my many passions!<br>I'm passionate about making fun interactive websites that make people want to keep coming back! 
-                I love the personalization and spirit you can bring with excellent code and unique, meaningful Design. Feel free to connect with me on LinkedIn or email and say hello!
+                I'm a front-end developer and a design lover based in Salt Lake City, Utah. I love incorporating aesthetic designs and functional working code to make a beautiful website.
+                <br>
+                <br>
+                I'm a software engineer who completed a certification through General Assembly. 
+                I also have always been interested in digital art and design (check out my design work in the work section!) drawing and creating are one of my many passions!
+                I'm passionate about making fun interactive websites that make people want to keep coming back! 
+                <br>
+                <br>
+                I love the personalization and spirit you can bring with excellent code and unique, meaningful design. Feel free to connect with me on LinkedIn or email and say hello!
             </p>
         </div>
-            
+    </section>        
     <!-- ================== PORTFOLIO ================== -->
-    <section id="portfolio" class="section section-active">
+    <section id="portfolio" class="section">
         <h2 class="title">WORK</h2>
 
         <div id="portfolio-wrapper" class="relative block-right">                        
@@ -110,7 +116,7 @@
 
                 <div id="p-item-2" class="grid-item element-item p-one-half" >
                     <a class="item-link" href="portfolio-2.html" data-id="2">
-                        <img src="images/mastermind.jpg" alt="">
+                        <img src="images/mastermind2.jpg" alt="">
                         <div class="portfolio-text-holder">
                             <div class="portfolio-text-wrapper">
                                 <p class="portfolio-text">MASTERMIND</p>
@@ -172,6 +178,7 @@
     <!-- ================== SKILLS ================== -->
     <section id="skills" class="section">
         <h2 class="title">SKILLS</h2>
+
         <div class="icon-grid">
             <div class="box-icon">
                 <img src="images/icons8-html-5OR.svg" height="70px" width="70px" />
@@ -227,20 +234,22 @@
     <!-- ================== contact ================== -->
     <section id="contact" class="section">
         <h2 class="title">CONTACT</h2>
-        <div class="content-670">
+
+        <div>
             <p>
-                Want to collaborate? Have questions about my resume or other qualifications, Feel free to send me a message! 
+                Want to collaborate? Have questions about my resume or other qualifications, feel free to send me a message! 
             </p>
         </div>
-        <ul class="about-info">
+        <ul class="contact-info">
             <li>
                 <h6>EMAIL</h6>
-                <a href="raquels.castillo.78@gmail.com">raquels.castillo.78@gmail.com</a>
+                <a href="mailto:raquels.castillo.78@gmail.com">raquels.castillo.78@gmail.com</a>
             </li>
             <li>
-                <h6>PHONE</h6>
-                <a href="tel:+18016615307">(+1) 801 661 5307</a>
+                <h6>RESUME</h6>
+                <a href="https://drive.google.com/file/d/1uS3B6bcSmMwiDfWfkFetb7tjbTycjB46/view?usp=sharing" target="_blank">View My Resume!</a>
             </li>
+
         </ul>
     </section>
     <!--=================== SCRIPT ===================-->
